Comprobar a fondo el login, Crear las tarjetas para las prendas de ropa

--- a/HTML/register.html
+++ b/HTML/register.html
@@ -38,7 +38,7 @@
                     <input type="text" name="ape2" id="ape2" required>
                 </div>
                 <div class="form-registrar">
-                    <p>Ya tengo cuenta <a href="login.html">Login</a></p>
+                    <p>Ya tengo cuenta <a href="login.php">Login</a></p>
                 </div>
                 <div class="form-acceder">
                     <button type="submit">Registrar</button>
